--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@okta/okta-react": "^3.0.0",
     "@okta/okta-signin-widget": "^3.9.0",
+    "axios": "^0.19.2",
     "colors": "^1.1.2",
     "cross-env": "^5.1.3",
     "dotenv": "^8.1.0",
